--- a/angular.json
+++ b/angular.json
@@ -33,6 +33,11 @@
               }
             ],
             "styles": ["src/theme.less", "src/styles.scss"],
+            "stylePreprocessorOptions": {
+              "includePaths": [
+                "src/assets/scss"
+              ]
+            },
             "scripts": []
           },
           "configurations": {
