--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -21,10 +21,10 @@
     "resolveJsonModule": true,
     "esModuleInterop": true,
     "paths": {
-      "@core/*": ["./src/app/core/*"],
       "@constants/*": ["./src/app/core/constants/*"],
       "@services/*": ["./src/app/core/services/*"],
       "@models/*": ["./src/app/core/models/*"],
+      "@data/*": ["./src/app/core/data/*"],
       "@styles/*": ["./src/assets/scss/*"]
     }
   }
