--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@ngrx/component-store": "^14.3.1",
     "@ngx-translate/core": "^14.0.0",
     "@ngx-translate/http-loader": "^7.0.0",
+    "@types/file-saver": "^2.0.5",
     "ng-zorro-antd": "^13.4.0",
     "ngx-pagination": "^6.0.2",
     "rxjs": "~7.5.0",
@@ -33,12 +34,15 @@
     "@angular/cli": "~14.0.5",
     "@angular/compiler-cli": "^14.0.0",
     "@types/jasmine": "~4.0.0",
+    "exceljs": "^4.3.0",
+    "file-saver": "^2.0.5",
     "jasmine-core": "~4.1.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
-    "typescript": "~4.7.2"
+    "typescript": "~4.7.2",
+    "xlsx": "^0.18.5"
   }
 }
