--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/jasmine": "~4.0.0",
     "exceljs": "^4.3.0",
     "file-saver": "^2.0.5",
+    "guid-typescript": "^1.0.9",
     "jasmine-core": "~4.1.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
