--- a/project.json
+++ b/project.json
@@ -28,7 +28,7 @@
             "output": "/assets/"
           }
         ],
-        "styles": ["src/theme.less", "src/styles.scss"],
+        "styles": ["node_modules/ng-zorro-antd/ng-zorro-antd.min.css", "src/theme.less", "src/styles.scss"],
         "stylePreprocessorOptions": {
           "includePaths": ["src/assets/scss"]
         },
