--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
+    "@ant-design/icons-angular": "^15.0.0",
     "@auth0/auth0-angular": "^1.10.1",
     "@ngrx/component-store": "^14.3.1",
     "@ngx-translate/core": "^14.0.0",
@@ -27,6 +28,7 @@
     "ng-zorro-antd": "^13.4.0",
     "ngx-pagination": "^6.0.2",
     "rxjs": "~7.5.0",
+    "socket.io-client": "^4.6.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
