--- a/project.json
+++ b/project.json
@@ -65,8 +65,7 @@
           "namedChunks": true
         }
       },
-      "defaultConfiguration": "production",
-      "proxyConfig": "src/proxy.conf.json"
+      "defaultConfiguration": "production"
     },
     "serve": {
       "executor": "@angular-devkit/build-angular:dev-server",
