--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "nx",
-    "start": "nx serve --open --port 4200 --host=0.0.0.0 --poll 5000 --publicHost=true --disable-host-check",
+    "start": "nx serve --open --port 4200 --host=0.0.0.0 --poll 5000 --publicHost=true",
     "build": "nx build --output-hashing=all",
     "build:docker": "ng build --configuration=production",
     "watch": "nx build --watch --configuration development",
